6# products crud finished

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PORT=
-DB_MONGO_ATLAS_URI=
-JWT_SEC_KEY=
-PASS_SEC=
+PORT=cualquier puerto
+DB_MONGO_ATLAS_URI=uri de mongo atlas ---> connect your aplication
+JWT_SEC_KEY=cualquiertesto
+PASS_SEC=cualquiertexto
