#16 Login auth with JWT

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PORT=cualquier puerto
 DB_MONGO_ATLAS_URI=uri de mongo atlas ---> connect your aplication
 PASS_SECRET=cualquiertexto
+JWT_SEC_KEY=cualquiertexto
