--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
@@ -23,7 +24,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.2.3",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "stripe": "^8.214.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
